# futbol-manager

./: .gitignore  README.md  plan.md
bot_whatsapp/: .env  .env.example  pyproject.toml
bot_whatsapp/src/bot_whatsapp/: __main__.py  client.py  database.py  handlers.py  scheduler.py
collection/EvolutionAPI/: Evolution API - v2.3.-.postman_collection.json
collection/FutBOT/: Crear webhook.bru  Enviar encuesta.bru  bruno.json
data/: futbol.db  jugadores.csv
evolution/: docker-compose.rpi.yml  docker-compose.yml
mcp_futbol/: .env.example  pyproject.toml
mcp_futbol/src/mcp_futbol/: server.py
