[project]
name = "bot-whatsapp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "evolutionapi>=0.1.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
]

[project.scripts]
bot-whatsapp = "bot_whatsapp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot_whatsapp"]
