[project]
name = "mcp-futbol"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-futbol = "mcp_futbol.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_futbol"]
